# swebench-modal

./: .gitignore  README.md  check_spec.py  pyproject.toml  score.py
app/: sandbox.py  server.py  test.py
gold_logs/astropy__astropy-12907/: test_output.txt
gold_logs/astropy__astropy-14182/: test_output.txt
gold_logs/astropy__astropy-14365/: test_output.txt
gold_logs/astropy__astropy-14995/: test_output.txt
gold_logs/astropy__astropy-6938/: test_output.txt
gold_logs/astropy__astropy-7746/: test_output.txt
gold_logs/django__django-10914/: test_output.txt
gold_logs/django__django-10924/: test_output.txt
reports/: astropy__astropy-12907  astropy__astropy-14182  astropy__astropy-14365  astropy__astropy-14995  astropy__astropy-6938  astropy__astropy-7746  django__django-10914  django__django-10924  django__django-11001  django__django-11019  django__django-11039  django__django-11049  django__django-11099  django__django-11133  django__django-11179  django__django-11283  django__django-11422  django__django-11564  django__django-11583  django__django-11620  django__django-11630  django__django-11742  django__django-11797  django__django-11815  django__django-11848  django__django-11905  django__django-11910  django__django-11964  django__django-11999  django__django-12113  django__django-12125  django__django-12184  django__django-12284  django__django-12286  django__django-12308  django__django-12453  django__django-12470  django__django-12497  django__django-12589  django__django-12700  (+259 more)
scripts/: copy_repos.py  copy_repos.sh
(+294 files in other folders)
