[project]
name = "swebench-modal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse",
    "datasets",
    "requests",
    "python-dotenv",
    "modal",
    "tqdm>=4.66.5",
    "pytest>=8.3.3",
    "pytest-json-report>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
